library/tests/fy_py_files/test_fy_py_files/invalid_fy_code_raises_correct_error/flow_invalid_mixin/flow_invalid_mixin_fy.py
"""fy
flow HelloWorld -> None:
    property hello
"""
